# starter-discord-bot

./: config.py  main.py  pyproject.toml  requirements.txt
