[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
disnake = "^2.8.0"
discord = "^2.1.0"
django-moderation = "^0.8.0"
python-dotenv = "^0.21.1"
openai = "^0.26.5"
googletrans = "^3.0.0"
asyncpg = "^0.27.0"
youtube_dl = "^2021.12.17"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"